# ModelMaestro

./: .env.example  .gitignore  50rows.csv  CONFUSION_MATRIX_AND_REPORTS_GUIDE.md  Customer_Churn_data.csv  INTEGRATION_STATUS.md  MIGRATION_TO_GCS.md  README.md  TASK_2_COMPLETE.md  create_bucket.py  docker-compose.yml  list_models.py  run_e2e_test.py  setup_buckets.py  test_analyzer.py  test_upload.py
backend/: CHURN_DATA_TEST_RESULTS.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  E2E_TEST_SUMMARY.md  GCS_BUCKET_STRUCTURE.md  QUICK_FIX.md  STEP4_TEST_RESULTS.md  TEST_STEP4_README.md  TRAINING_BUDGET_FIX.md  TRAINING_FIXES_FINAL.md  check_completed_projects.py  check_deployment_status.py  check_endpoints.py  check_model_artifacts.py  check_operation_details.py  check_project_data.py  check_training_budget.py  check_vertex_models.py  deploy_model_cli.sh  fix_endpoint_conflict.py  investigate_deployment.py  list_endpoints.py  monitor_deployment.py  pyproject.toml  requirements-minimal.txt  requirements.txt  test_api_e2e.py  test_confusion_matrix_and_report.py  test_data_processor_imports.py  test_e2e_local.py  test_e2e_pipeline.py  test_e2e_simple.py  test_evaluation_report.py  test_evaluator.py  test_gcs_confusion_matrix.py  test_minimal.py  test_pipeline_structure.py  test_simple.py  test_step4_integration.py  test_step4_with_churn_data.py  (+1 more)
backend/app/: main.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py  api_responses.py  audit.py  dataset.py  model.py  project.py
backend/tests/: conftest.py  test_model_selector.py
frontend/: Dockerfile  (+7 more)
(+199 files in other folders)
